--- a/package.json
+++ b/package.json
@@ -91,6 +91,10 @@
     "lint": "eslint src",
     "test": "vscode-test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/griga/inline-svg-fold"
+  },
   "devDependencies": {
     "@types/vscode": "^1.100.0",
     "@types/mocha": "^10.0.10",
